--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<base href=".">
 		<title>Metronome</title>
 		<script src="js/scripts.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css">		
 	</head>
 	
 	<body>
